--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "*"
   },
   "devDependencies": {
+    "@mui/types": "^7.2.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "eslint": "^8.0.1",
     "eslint-config-next": "13.0.7",
