--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "18.11.15",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "dayjs": "^1.11.7",
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
