Feat: config MulterS3

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,12 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/utils/mongodb.js",
+    "src/utils/upload.js"
+  ],
   "exclude": ["node_modules"]
 }
