--- a/package.json
+++ b/package.json
@@ -18,8 +18,14 @@
     "@types/node": "18.11.15",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "aws-sdk": "^2.1295.0",
+    "crypto": "^1.0.1",
     "dayjs": "^1.11.7",
+    "mongodb": "^4.13.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "next": "13.0.7",
+    "next-connect": "^0.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "*"
